--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,1 +1,9 @@
-@import "./test2.css";
+@import "./normalize.css";
+@import "./variables.css";
+@import "./base.css";
+@import "./typography.css";
+@import "./images.css";
+@import "./links.css";
+@import "./lists.css";
+@import "./fields.css";
+@import "./buttons.css";
