--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -3,10 +3,9 @@ html {
 }
 
 body {
-  background-color: #fff;
   color: #000; /* ! replace with variable */
   line-height: 1.75;
-  font-family: "Karla", sans-serif;
+  font-family: var(--fontFamily__base);
   font-weight: 400;
   letter-spacing: -0.01em;
   font-size: var(--fontSize__base);
