--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -4,7 +4,7 @@ h3,
 h4,
 h5 {
   margin: 3rem 0 1.38rem;
-  font-family: "Karla", sans-serif;
+  font-family: var(--fontFamily__heading);
   font-weight: 700;
   line-height: 1.3;
   letter-spacing: -0.052em;
@@ -33,4 +33,13 @@ h5 {
 
 p {
   margin-bottom: 1rem;
+}
+
+.subheader {
+  margin-bottom: 0.889rem;
+  font-weight: 700;
+  font-size: var(--fontSize__base);
+  letter-spacing: 0.25em;
+  text-transform: uppercase;
+  display: block;
 }
