--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -10,7 +10,7 @@ html {
 }
 
 body {
-  color: #000; /* ! replace with variable */
+  color: var(--color__neutral--800);
   line-height: 1.75;
   font-family: var(--fontFamily__base);
   font-weight: 400;
