--- a/src/example.css
+++ b/src/example.css
@@ -4,8 +4,8 @@
 }
 
 .container {
-  max-width: 900px;
+  max-width: 1100px;
   width: 100%;
   margin: 0 auto;
-  padding: 0 20px;
+  padding: 100px 20px;
 }
