Add responsive font size

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -3,6 +3,12 @@ html {
   box-sizing: border-box;
 }
 
+@media (max-width: 999px) {
+  html {
+    font-size: 100%;
+  }
+}
+
 *,
 *:before,
 *:after {
