--- a/src/styles/buttons.css
+++ b/src/styles/buttons.css
@@ -1,4 +1,5 @@
 button,
+.button,
 a.button,
 input[type="submit"] {
   background-color: var(--color__yellow--600);
@@ -17,6 +18,7 @@ input[type="submit"] {
 }
 
 button.button--secondary,
+.button--secondary,
 a.button--secondary,
 input[type="submit"].button--secondary {
   background-color: transparent;
