--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -15,13 +15,10 @@ input[type="submit"] {
   padding: 13px 30px;
   text-align: center;
   text-decoration: none;
-}
 
-button.button--secondary,
-.button--secondary,
-a.button--secondary,
-input[type="submit"].button--secondary {
-  background-color: transparent;
-  border: 2px solid var(--color__yellow--600);
-  color: var(--color__yellow--600);
+  &.button--secondary {
+    background-color: var(--color__yellow--400);
+    border: 2px solid var(--color__yellow--400);
+    color: var(--color__yellow--600);
+  }
 }
