Remove button and input defaults

--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -1,24 +1,24 @@
-button,
-.button,
-a.button,
-input[type="submit"] {
-  background-color: var(--color__yellow);
-  border: 2px solid var(--color__yellow);
-  border-radius: 7px;
-  color: #fff;
-  cursor: pointer;
-  display: inline-block;
-  font-family: var(--fontFamily__base);
-  font-size: var(--fontSize__base);
-  font-weight: 700;
-  line-height: 1;
-  padding: 13px 30px;
-  text-align: center;
-  text-decoration: none;
+// button,
+// .button,
+// a.button,
+// input[type="submit"] {
+//   background-color: var(--color__yellow);
+//   border: 2px solid var(--color__yellow);
+//   border-radius: 7px;
+//   color: #fff;
+//   cursor: pointer;
+//   display: inline-block;
+//   font-family: var(--fontFamily__base);
+//   font-size: var(--fontSize__base);
+//   font-weight: 700;
+//   line-height: 1;
+//   padding: 13px 30px;
+//   text-align: center;
+//   text-decoration: none;
 
-  &.button--secondary {
-    background-color: transparent;
-    border: 2px solid var(--color__yellow);
-    color: var(--color__yellow);
-  }
-}
+//   &.button--secondary {
+//     background-color: transparent;
+//     border: 2px solid var(--color__yellow);
+//     color: var(--color__yellow);
+//   }
+// }
