Update main font families

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -62,8 +62,8 @@
   --color__secondary-red: var(--color__secondary-red--500);
 
   /* fonts */
-  --fontFamily__heading: "Karla", -apple-system, Roboto, sans-serif;
-  --fontFamily__base: "Karla", -apple-system, Roboto, sans-serif;
+  --fontFamily__heading: "Erode", serif;
+  --fontFamily__base: "Source Sans Pro", -apple-system, Roboto, sans-serif;
 
   /* type scale */
   --fontSize__h0: 3.815rem;
