Add extra small font variant

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -74,7 +74,8 @@
   --fontSize__h5: 1.25rem;
   --fontSize__base: 1rem;
   --fontSize__base--lg: 1.167rem;
-  --fontSize__base--sm: 0.889rem;
+  --fontSize__base--sm: 0.8rem;
+  --fontSize__base--xs: 0.64rem;
 
   /* line heights */
   --lineHeight__heading: 1.3;
