--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -5,7 +5,7 @@ h4,
 h5 {
   margin: 3rem 0 1.38rem;
   font-family: var(--fontFamily__heading);
-  font-weight: 700;
+  font-weight: 500;
   line-height: 1.3;
   letter-spacing: -0.05em;
   color: var(--color__neutral--900);
@@ -36,11 +36,15 @@ p {
   margin-bottom: 1rem;
 }
 
-.subheader {
+.subheader-temp {
   margin-bottom: 1rem;
-  font-weight: 700;
-  font-size: var(--fontSize__base);
-  letter-spacing: 0.25em;
+  font-weight: 600;
+  font-size: var(--fontSize__base--xs);
   text-transform: uppercase;
-  display: block;
+  display: inline-block;
+  line-height: 1;
+  background-color: var(--color__yellow--100);
+  color: var(--color__yellow--900);
+  padding: 5px 10px;
+  border-radius: 11px;
 }
