Fix button specificity

--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -23,7 +23,8 @@
 //   }
 // }
 
-.btn {
+.btn,
+a.btn {
   background-color: var(--color__blue);
   font-size: var(--fontSize__base);
   color: var(--color__blue--50);
