--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -9,6 +9,10 @@ h5 {
   line-height: 1.3;
   letter-spacing: -0.05em;
   color: var(--color__neutral--900);
+
+  .subheader-temp {
+    letter-spacing: 0;
+  }
 }
 
 h1 {
