--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -62,7 +62,7 @@
   --color__secondary-red: var(--color__secondary-red--500);
 
   /* fonts */
-  --fontFamily__heading: "Erode", serif;
+  --fontFamily__heading: "Source Sans Pro", -apple-system, Roboto, sans-serif;
   --fontFamily__base: "Source Sans Pro", -apple-system, Roboto, sans-serif;
 
   /* type scale */
