--- a/src/styles/_fields.scss
+++ b/src/styles/_fields.scss
@@ -1,57 +1,76 @@
-// input[type="text"],
-// input[type="email"],
-// input[type="tel"] {
-//   border: none;
-//   border-radius: 6px;
-//   background: var(--color__neutral--100);
-//   font-size: var(--fontSize__base--sm);
-//   height: 48px;
-//   line-height: 48px;
-//   padding: 0 20px;
-//   width: 100%;
-//   outline: 0;
-// }
+input[type="text"],
+input[type="email"],
+input[type="tel"] {
+  border: none;
+  border-radius: 6px;
+  background: var(--color__neutral--100);
+  font-size: var(--fontSize__base--sm);
+  height: 48px;
+  line-height: 48px;
+  padding: 0 20px;
+  width: 100%;
+  outline: 0;
 
-// .select-wrap {
-//   position: relative;
-//   border-radius: 6px;
-//   background: var(--color__neutral--100);
-//   font-size: var(--fontSize__base--sm);
-//   height: 48px;
-//   line-height: 48px;
-//   cursor: pointer;
+  + fieldset {
+    display: none;
+  }
 
-//   &::after {
-//     content: "";
-//     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' stroke='%232680c2' viewBox='0 0 24 24'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m19 9-7 7-7-7'/%3E%3C/svg%3E");
-//     background-repeat: no-repeat;
-//     background-position: 50% 50%;
-//     height: 18px;
-//     width: 18px;
-//     position: absolute;
-//     top: 14px;
-//     right: 20px;
-//   }
+  &[aria-invalid="true"] {
+    border: 1px solid var(--color__error--500);
+  }
+}
 
-//   select {
-//     appearance: none;
-//     background: none;
-//     border: none;
-//     position: absolute;
-//     top: 0;
-//     right: 0;
-//     bottom: 0;
-//     left: 0;
-//     width: 100%;
-//     padding: 0 20px;
-//     outline: 0;
-//     cursor: pointer;
-//     z-index: 1;
+.select-wrap {
+  position: relative;
+  border-radius: 6px;
+  background: var(--color__neutral--100);
+  font-size: var(--fontSize__base--sm);
+  height: 48px;
+  line-height: 48px;
+  cursor: pointer;
 
-//     &:invalid,
-//     &[disabled],
-//     option:disabled {
-//       color: #828283;
-//     }
-//   }
-// }
+  &::after {
+    content: "";
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' stroke='%232680c2' viewBox='0 0 24 24'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m19 9-7 7-7-7'/%3E%3C/svg%3E");
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    height: 18px;
+    width: 18px;
+    position: absolute;
+    top: 14px;
+    right: 20px;
+  }
+
+  select {
+    appearance: none;
+    background: none;
+    border: none;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    padding: 0 20px;
+    outline: 0;
+    cursor: pointer;
+    z-index: 1;
+
+    &:invalid,
+    &[disabled],
+    option:disabled {
+      color: #828283;
+    }
+  }
+}
+
+label.ft--label {
+  font-weight: 600 !important;
+  color: var(--color__neutral--900) !important;
+
+  & ~ p.ft-helper-txt {
+    &.Mui-error {
+      color: red;
+    }
+  }
+}
