Layout insurance form

--- a/src/styles/forms/_submit-insurance.scss
+++ b/src/styles/forms/_submit-insurance.scss
@@ -1,5 +1,7 @@
 div[data-page="63d40c71d124b4071f4af0ba"] {
-  * {
-    background: red !important;
+  div#e10 {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 20px;
   }
 }
