--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -7,6 +7,7 @@
 @import "./lists";
 @import "./fields";
 @import "./buttons";
+@import "./titan-resets";
 
 // forms
 @import "./forms/submit-insurance";
