Remove formtitan default margin on parent elements

--- a/src/styles/_titan-resets.scss
+++ b/src/styles/_titan-resets.scss
@@ -8,6 +8,8 @@
   display: none !important;
 }
 
+div[data-type="Title"],
+div[data-type="Heading"],
 div[data-type="Subhead"] {
   margin: 0 !important;
 }
