--- a/src/styles/_titan-resets.scss
+++ b/src/styles/_titan-resets.scss
@@ -8,6 +8,7 @@
   display: none !important;
 }
 
+// remove default margin on parent elements
 div[data-type="Title"],
 div[data-type="Heading"],
 div[data-type="Subhead"] {
