Add default width to select box

--- a/src/styles/_titan-resets.scss
+++ b/src/styles/_titan-resets.scss
@@ -1,5 +1,6 @@
 // change default width of inputs
-.ft--theme--FormField--text {
+.ft--theme--FormField--text,
+.ft--theme--FormField--select {
   width: 100% !important;
 }
 
