Add margin to titan p div

--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -39,6 +39,7 @@ h5 {
   font-size: var(--fontSize__h5) !important;
 }
 
-p {
+p,
+div.ft--theme--Typography--p {
   margin-bottom: 1rem !important;
 }
