Create space between prefilled info and form

--- a/src/styles/forms/_submit-insurance.scss
+++ b/src/styles/forms/_submit-insurance.scss
@@ -14,6 +14,7 @@ div[data-page="63d40c71d124b4071f4af0ba"] {
 
   // primary insurance
   div#e36 {
+    margin-top: 2rem;
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 20px;
