--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -1,21 +1,22 @@
 button,
 .button,
-a.button {
-  background-color: var(--color__blue);
-  font-size: var(--fontSize__base);
-  color: var(--color__blue--50);
-  border: 2px solid var(--color__blue);
-  font-weight: 600;
-  border-radius: 6px;
-  line-height: 1;
-  padding: 16px 28px;
-  display: inline-block;
-  cursor: pointer;
-  text-align: center;
-  transition: border-color 0.2s ease-in-out, background-color 0.2s ease-in-out;
+a.button,
+div.ft--theme--Button--primary {
+  background-color: var(--color__blue) !important;
+  font-size: var(--fontSize__base) !important;
+  color: var(--color__blue--50) !important;
+  border: 2px solid var(--color__blue) !important;
+  font-weight: 600 !important;
+  border-radius: 6px !important;
+  line-height: 1 !important;
+  padding: 16px 28px !important;
+  display: inline-block !important;
+  cursor: pointer !important;
+  text-align: center !important;
+  transition: border-color 0.2s ease-in-out, background-color 0.2s ease-in-out !important;
 
   &:hover:not(&--secondary) {
-    background-color: var(--color__blue--800);
+    background-color: var(--color__blue--800) !important;
   }
 
   &--secondary {
