Hide default validation on insurance form

--- a/src/styles/forms/_submit-insurance.scss
+++ b/src/styles/forms/_submit-insurance.scss
@@ -1,4 +1,10 @@
 div[data-page="63d40c71d124b4071f4af0ba"] {
+  // hide validation borders
+  .ft--theme--FormField--text > div:before,
+  .ft--theme--FormField--text > div:after {
+    display: none !important;
+  }
+
   // put all radios (insurance type) and paragraphs on own line
   .ft--theme--FormField--radio,
   div[data-type="Paragraph"] {
