Test target element

--- a/src/styles/_fields.scss
+++ b/src/styles/_fields.scss
@@ -1,4 +1,4 @@
-div.ft--theme--FormField--text:not([data-type="Input Fields"]) {
+div.ft--theme--FormField-elRoot {
   border: none;
   border-radius: 6px;
   background: var(--color__neutral--100);
