--- a/src/styles/forms/_submit-insurance.scss
+++ b/src/styles/forms/_submit-insurance.scss
@@ -1,8 +1,13 @@
 div[data-page="63d40c71d124b4071f4af0ba"] {
   // hide validation borders
-  .ft--theme--FormField--text > div:before,
-  .ft--theme--FormField--text > div:after {
-    display: none !important;
+  .ft--theme--FormField--text,
+  .ft--theme--FormField--select {
+    & > div {
+      &:before,
+      &:after {
+        display: none !important;
+      }
+    }
   }
 
   // put all radios (insurance type) and paragraphs on own line
