--- a/src/styles/_fields.scss
+++ b/src/styles/_fields.scss
@@ -1,13 +1,13 @@
 div.ft--theme--FormField-elRoot {
-  border: none;
-  border-radius: 6px;
-  background: var(--color__neutral--100);
-  font-size: var(--fontSize__base--sm);
-  height: 48px;
-  line-height: 48px;
-  padding: 0 20px;
-  width: 100%;
-  outline: 0;
+  border: none !important;
+  border-radius: 6px !important;
+  background: var(--color__neutral--100) !important;
+  font-size: var(--fontSize__base--sm) !important;
+  height: 48px !important;
+  line-height: 48px !important;
+  padding: 0 20px !important;
+  width: 100% !important;
+  outline: 0 !important;
 
   + fieldset {
     display: none;
