Change width property value

--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -1,5 +1,5 @@
 div[data-type="Button"] {
-  width: auto !important;
+  width: fit-content !important;
   min-width: 180px !important;
 
   button {
