Fix broken data value

--- a/src/styles/forms/_submit-insurance.scss
+++ b/src/styles/forms/_submit-insurance.scss
@@ -60,7 +60,7 @@ div[data-page="63d40c71d124b4071f4af0ba"] {
   }
 
   // button group
-  div[data-row="86"] {
+  div[data-row="row86"] {
     display: flex;
     flex-direction: row;
     gap: 5px;
