Remove border from date field

--- a/src/styles/forms/_submit-insurance.scss
+++ b/src/styles/forms/_submit-insurance.scss
@@ -2,7 +2,8 @@ div[data-page="63d40c71d124b4071f4af0ba"] {
   // hide validation borders
   .ft--theme--FormField--text > div,
   .ft--theme--FormField--text > div,
-  .ft--theme--FormField--select label + div {
+  .ft--theme--FormField--select label + div,
+  .ft--theme--FormField--date .ft--theme--FormField-elRoot {
     &:before,
     &:after {
       display: none !important;
