--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -23,4 +23,7 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
+  -webkit-font-kerning: auto;
+  font-kerning: auto;
 }
