--- a/src/styles/_fields.scss
+++ b/src/styles/_fields.scss
@@ -35,6 +35,8 @@ label.ft--label {
 }
 
 div.ft--theme--FormField--fileupload {
+  width: 100% !important;
+
   > div {
     background: none !important;
 
